# ai_image_captioning

./: .gitignore  LICENSE  README.md  gradio_app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
data/: validated_captions.parquet
src/ai_image_captioning/agent/: image_captioning.py
src/ai_image_captioning/data_model/: image_metadata.py
src/ai_image_captioning/ingestion/: photos_loader.py
src/ai_image_captioning/utils/: image_preprocessing.py
